# pdm-blaisep-bites

./: README.md  pyproject.toml  requirements-dev.txt  requirements_bites.txt
102/: colors.py
blog/blog/: settings.py  urls.py
blog/mydashboard/: dashboards.py
blog/posts/: models.py  views.py
blog/templates/: all_posts.html  base.html  navbar.html
