[tool.poetry]
name = "vitrina"
version = "0.1.0"
description = "basic poetry project inspired by https://github.com/oliverandrich/django-tailwind-cli/pyproject.toml"
authors = ["blaisep <blaise@gmail.com>"]
readme = "README.md"
packages = [{include = "pdm_bites"}]

[tool.poetry.dependencies]
python = "^3.12"

homepage = "https://highly-unlikely.com"
repository = "https://github.com/blaisep/vitrina"
documentation = "https://vitrina.readthedocs.io"
keywords = ["django", "tailwind", "css", "htmx"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Environment :: Web Environment",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Sphinx",
]
packages = [{ include = "django_tailwind_cli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.0"
certifi = "^2023.7.22"
django-extensions = { version = "^4.0", optional = true }
werkzeug = { version = "^3.0.0", optional = true }

[tool.poetry.extras]
"django-extensions" = ["django-extensions", "werkzeug"]

[tool.poetry.group.dev.dependencies]
django-types = ">=0.17,<0.20"
coverage = { extras = ["toml"], version = "^7.3.2" }
pytest = "^7.4.2"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Ruff
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
  # Don't touch unused variables
  "F841",
]

[tool.ruff.isort]
known-first-party = ["vitrina"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"tests/snapshots/*" = ["ALL"]

# Pytest
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
django_find_project = false
markers = ["mock_network_and_subprocess"]

# Coverage
[tool.coverage.run]
source = ["django_tailwind_cli", "tests"]
branch = true

[tool.coverage.paths]
source = ["src", ".tox/**/site-packages"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]